--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ tags
 tags*
 *.cabal
 ci-access-key.json
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
