--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -3,10 +3,13 @@ version: '2'
 syncs:
   caldwell-client-sync:
     src: 'client'
-    sync_excludes: ['node_modules', 'elm-stuff']
+    sync_excludes:
+      - 'node_modules'
+      - 'elm-stuff'
 
   caldwell-api-sync:
     src: 'api'
     # sync_strategy: 'native_osx' # not needed, this is the default now
-    sync_excludes: ['.stack-work']
+    sync_excludes:
+      - '.stack-work'
 
